--- a/UnicodeHero/project.json
+++ b/UnicodeHero/project.json
@@ -1,4 +1,6 @@
 {
   "engine": "cocos-creator-js",
-  "packages": "packages"
+  "packages": "packages",
+  "version": "2.1.3",
+  "id": "97dde027-c99f-483c-a723-8521252f2ea2"
 }
